[tool.poetry]
name = "webhook-server"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.2"
stripe = "^2.56.0"
aioredis = "^1.3.1"
motor = "^2.3.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100